--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,12 +12,13 @@
     <div class="page-header">
     	{% if user.is_authenticated %}
     <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
 {% endif %}
         <h1><a href="/">Jamie's Django Blog</a></h1>
     </div>
     <div class="content container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
             {% block content %}
             {% endblock %}
             </div>
